arc: bluetooth: Do not send cached devices

We should not send out cached devices in the first place.
Double bugs involve here:

At the beginning of human history:
We call SendCachedDevicesFound() whenever we start discovery.
However, SendDevice() doesn't really send cached devices,

until I fix it in crrev.com/c/1105559......

But the problem is, in the first place, cached (inactive) devices
are not supposed to be reported in a discovery session.

Also note that DeviceFound() is completely independent from
LEDeviceFound(). If bluetooth service doesn't give an implementation for
DeviceFound() (which is not likely), it could still provide an
implementation for LEDeviceFound(), and LEDeviceFound() should still be
called in this case.

BUG=chromium:885339
TEST=manual test

Change-Id: Id97acd40fad19e4ee5a3ed64792a0598dce46ea7
Reviewed-on: https://chromium-review.googlesource.com/c/1303253
Reviewed-by: Yusuke Sato <yusukes@chromium.org>
Commit-Queue: Qiyu Hu <qiyuh@google.com>
Cr-Commit-Position: refs/heads/master@{#603676}
Former-commit-id: 66e2d1f03a2b705490bf30d8310f2b7a6bf62871